# city-alert-registry

./: .gitignore  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
api_v1/: __init__.py
api_v1/air_alert/: crud.py  dependencies.py  schemas.py  views.py
api_v1/location/: dependecies.py  schemas.py  tool.py  views.py
api_v1/system/: view.py  views.py
core/: config.py  openapi.py
core/middlewares/: auth.py
core/tests/: api_test.py  test_unit.py  test_views.py
core/tools/location/: tool.py  xsls_to_json.py
