[project]
name = "raid-alert"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksandr",email = "aradinskij6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "alerts-in-ua (>=0.2.7,<0.3.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
